[tool.poetry]
name = "mavlog2csv"
version = "1.1"
description = "Convert ardupilot telemetry log into csv with selected columns"
authors = ["Alexander Gorokhov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"  # because of pyinstaller
pymavlink = "~2.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
pyinstaller = "*"

[tool.poetry.scripts]
mavlog2csv = 'mavlog2csv:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
atomic = true
line_length = 120
lines_after_imports = 2
combine_as_imports = true

[tool.black]
line-length = 120
